refactor: consolidate join node computation in JoinNodeUtils
Centralize all join node logic into JoinNodeUtils to eliminate duplication across
PartitionFilter and ComponentCPQBuilder.

New JoinNodeUtils methods:
- computeVertexMultiplicity(Partition): extract multiplicity map
- computeJoinNodesFromMultiplicity(Map, Set): compute from counts + free vars
- localJoinNodes(BitSet, List<Edge>, Set): filter join nodes by edge subset

Removed duplicate implementations:
- PartitionFilter.vertexMultiplicity() → JoinNodeUtils.computeVertexMultiplicity()
- PartitionFilter.computeJoinNodes() → JoinNodeUtils.computeJoinNodesFromMultiplicity()
- ComponentCPQBuilder.collectLocalJoinNodes() → JoinNodeUtils.localJoinNodes()

Impact:
- Single source of truth for join node computation
- ~30 lines removed (duplicate logic eliminated)
- PartitionFilter: 103 → 80 LOC (-23)
- ComponentCPQBuilder: 147 → 129 LOC (-18)
- JoinNodeUtils: 177 → 217 LOC (+40 centralized utilities)
- All 42 tests pass

Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>